--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.ControleDeProjeto"
         tools:targetApi="31">
         <activity
+            android:name=".view.TaskActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.AboutBaseActivity"
             android:exported="false" />
         <activity
@@ -25,6 +28,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
