--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.ControleDeProjeto"
         tools:targetApi="31">
         <activity
+            android:name=".view.TaskViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.CreateTaskActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.TaskActivity"
             android:exported="false" />
         <activity
